// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue-responsiveness > should reverse unordered values 1`] = `
<div>
  <pre>
    {
  "min": {
    "min": true,
    "max": true,
    "only": true
  },
  "max": {
    "min": true,
    "max": true,
    "only": true
  },
  "current": "min"
}
  </pre>
  <h1>
     Current interval: 
    <span>
      min
    </span>
  </h1>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vue-responsiveness > should work 1`] = `
<div>
  <pre>
    {
  "xs": {
    "min": true,
    "max": true,
    "only": true
  },
  "sm": {
    "min": true,
    "max": true,
    "only": true
  },
  "md": {
    "min": true,
    "max": true,
    "only": true
  },
  "lg": {
    "min": true,
    "max": true,
    "only": true
  },
  "xl": {
    "min": true,
    "max": true,
    "only": true
  },
  "xxl": {
    "min": true,
    "max": true,
    "only": true
  },
  "current": "xs"
}
  </pre>
  <h1>
     Current interval: 
    <span>
      xs
    </span>
  </h1>
  <h3>
    <code>
      sm
    </code>
     and below
  </h3>
  <h3>
    <code>
      md
    </code>
     only
  </h3>
  <h3>
    <code>
      lg
    </code>
     and above
  </h3>
</div>
`;

exports[`vue-responsiveness > should work with custom breakpoints 1`] = `
<div>
  <pre>
    {
  "min": {
    "min": true,
    "max": true,
    "only": true
  },
  "max": {
    "min": true,
    "max": true,
    "only": true
  },
  "current": "min"
}
  </pre>
  <h1>
     Current interval: 
    <span>
      min
    </span>
  </h1>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;
